<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CostEstimate">

    <ImageView
        android:id="@+id/resultsImg"
        android:layout_width="fill_parent"
        android:layout_height="158dp"
        app:srcCompat="@drawable/results"
        android:layout_centerHorizontal="true"

        />

    <TextView
        android:id="@+id/txtMilesResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/resultsImg"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="20dp"
        android:text="@string/txtMilesResult"
        android:textAlignment="center"
        android:textSize="20dp"
        />

    <TextView
        android:id="@+id/txtCarResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtMilesResult"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:text="@string/txtCarResult"
        android:layout_marginStart="0dp"
        android:layout_marginTop="20dp"
        android:textSize="20dp"


        />
    <ImageView
        android:id="@+id/theCarResultImg"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@id/txtCarResult"
        app:srcCompat="@drawable/ic_launcher_background"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        />
    <TextView
        android:id="@+id/txtFinalCost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/theCarResultImg"
        android:textAlignment="center"
        android:text="@string/txtFinalCost"
        android:layout_marginTop="10dp"
        android:textSize="20dp"
        />

    <Button
        android:id="@+id/goBackBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtFinalCost"
        android:layout_marginTop="2dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:text="@string/goBackButton"

        />

    <Button
        android:id="@+id/requestRideBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtFinalCost"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="2dp"
        android:layout_toRightOf="@id/goBackBtn"
        android:text="@string/requestButton" />


</RelativeLayout>